--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             <header>
                 Header Logo
             </header>
-            <span class="div2"><p>Header link one</p>
-                <p>Header link two</p>
-                <p>Header link three</p></span>
-           </div>
-           <div class="top"> <div class="div3">
-            <h2>
+            <div class="div2">
+                <div>Header link one</div>
+                <div>Header link two</div>
+                <div>Header link three</div> 
+            </div>
+        </div>
+        <div class="top">
+            <div class="div3">
+             <h2>
                 This website is awesome
                </h2>
                <p>
@@ -40,7 +43,8 @@
             Some random Information
         </h3>
         <div class="divfor4">
-            <div class="imdiv">  <div class="imgdiv"></div>
+            <div class="imdiv"> 
+                 <div class="imgdiv"></div>
             <p>This is some subtext under an illustration or image.</p></div>
            <div class="imdiv">  <div  class="imgdiv"></div>
            <p>This is some subtext under an illustration or image.</p></div>
@@ -60,8 +64,8 @@
 
     <div class="cta">
         <div class="cta2">
-        <h5>Call to action! It's time!</h5>
-        <p>Sign up to our product by clicking the button over there</p>
+            <h5>Call to action! It's time!</h5>
+            <p>Sign up to our product by clicking the button over there</p>
         </div>
         <input class="sign" type="button" value="Sign Up">
     </div>
