style:Add the hover pseudo selector to buttons class

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h5>Call to action! It's time!</h5>
             <p>Sign up to our product by clicking the button over there</p>
         </div>
-        <input class="sign" type="button" value="Sign Up">
+        <input class="button" id="sign" type="button" value="Sign Up">
     </div>
 
 
